--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "dababy",
   "version": "1.1.0",
   "description": "Data binding so simple even DaBaby could do it!",
-  "main": "src/dababy.js",
-  "browser": "src/dababy.js",
+  "main": "dist/dababy.js",
+  "browser": "dist/dababy.js",
   "scripts": {
-    "build": "tsc",
+    "dev": "esbuild src/dababy.ts --bundle --minify --watch --outfile=dist/dababy.js",
+    "build": "esbuild src/dababy.ts --bundle --minify --outfile=dist/dababy.js",
     "cleanup": "prettier --write src --parser typescript"
   },
   "repository": {
@@ -32,6 +33,7 @@
     "node": ">=6.4.0"
   },
   "devDependencies": {
+    "esbuild": "^0.12.2",
     "typescript": "^4.2.4"
   }
 }
